--- a/css/main.scss
+++ b/css/main.scss
@@ -146,6 +146,9 @@ small {
       margin-top: 10px;
     }
   }
+  #defend {
+    margin-top: -175px;
+  }
   .navbar-toggle {
     display: block;
   }
