--- a/css/splash.scss
+++ b/css/splash.scss
@@ -161,4 +161,15 @@ small {
   p {
     font-size: 20px;
   }
+  #defend {
+    margin-top: -175px;
+  }
+  .ol-styled {
+    li {
+      margin-top: 20px;
+      margin-bottom: 20px;
+      padding-top: 20px;
+      padding-bottom: 20px;
+    }  
+  }
 }
