--- a/css/main.scss
+++ b/css/main.scss
@@ -128,6 +128,9 @@ small {
 
 
 @media(max-width: 992px) {
+  section {
+    padding: 25px 0;
+  }
   #page-content {
     padding-left: 0;
     padding-top:400px;
