--- a/css/splash.scss
+++ b/css/splash.scss
@@ -125,6 +125,9 @@ small {
 
 
 @media(max-width: 992px) {
+  section {
+    padding: 25px 0;
+  }
   #sidebar {
     position: relative;
     display: block;
@@ -152,6 +155,15 @@ small {
       color: #fff;
     }
   }
+  #defend {
+    margin-top: -175px;
+  }
+  #social {
+    text-align: center;
+    .icon {
+      margin-top: 10px;
+    }
+  }
   h1, .h1 {
     font-size: 27px;
   }
@@ -161,15 +173,24 @@ small {
   p {
     font-size: 20px;
   }
-  #defend {
-    margin-top: -175px;
+  .btn {
+    margin: 15px auto;
   }
   .ol-styled {
     li {
-      margin-top: 20px;
-      margin-bottom: 20px;
+      margin-top: 10px;
+      margin-bottom: 10px;
       padding-top: 20px;
       padding-bottom: 20px;
     }  
+  }
+}
+
+@media(max-width: 500px) {
+  #sidebar {
+    height: 250px;
+  }
+  #defend {
+    margin-top: -100px;
   }
 }
