--- a/css/splash.scss
+++ b/css/splash.scss
@@ -50,15 +50,6 @@ small {
 
 #page-footer {}
 
-#mainnav {
-  li {
-    margin: 10px;
-    a {
-      padding: 10px;
-    }
-  }
-}
-
 #sidebar {
   position: fixed;
   width: 25%;
@@ -78,6 +69,26 @@ small {
     color: #fff;
     border: 1px solid #fff;
     margin: 0;
+    &:hover, &:focus, &:active {
+      background-color: #fff;
+      color: $gray-dark;
+    }
+  }
+}
+
+#social {
+  span {
+    color: $red;
+  }
+  a {
+    margin-left: 5px;
+    margin-right: 5px;
+    &:hover, &:active, &:focus {
+      color: transparent;
+      span {
+        color: darken($red, 15%);
+      }
+    }
   }
 }
 
@@ -160,7 +171,10 @@ small {
   }
   #social {
     text-align: center;
-    .icon {
+    img {
+      margin: 0 auto;
+    }
+    a {
       margin-top: 10px;
     }
   }
@@ -189,12 +203,6 @@ small {
 
 @media(max-width: 500px) {
   #topnav {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background: transparent;
-    text-align: center;
     .btn {
       width: 125px;
       font-size: 12px;
