--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
      <meta property="og:title" content="{{ site.facebook.title }}">
      <meta property="og:description" content="{{ site.facebook.description }}">
      <meta property="og:type" content="website">
-     <meta property="og:url" content="{{ page.url | prepend: site.url }}">
+     <meta property="og:url" content="http://defendthewindow.com">
      <meta property="og:image" content="{{ site.facebook.featured_image }}">
      <meta property="og:image:type" content="image/jpg">
      <meta property="og:image:width" content="1200">
