--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
      <meta property="og:description" content="{{ site.facebook.description }}">
      <meta property="og:type" content="website">
      <meta property="og:url" content="http://defendthewindow.com">
-     <meta property="og:image" content="{{ site.facebook.featured_image }}">
+     <meta property="og:image" content="http://defendthewindow.com/img/og-image.jpg">
      <meta property="og:image:type" content="image/jpg">
      <meta property="og:image:width" content="1200">
      <meta property="og:image:height" content="600">
@@ -33,7 +33,7 @@
      <meta name="twitter:creator" content="{{ site.twitter.username }}">
      <meta name="twitter:title" content="{{ site.twitter.title }}">
      <meta name="twitter:description" content="{{ site.twitter.description }}">
-     <meta name="twitter:image" content="{{ site.twitter.featured_image }}">
+     <meta name="twitter:image" content="http://defendthewindow.com/{{ site.twitter.featured_image }}">
      <meta name="twitter:image:alt" content="{{ site.twitter.image_alt_text }}">
     {% endif %}
 
