Added analytics and cleaned up codebase

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
       </div>
       {{ content }}
     </main>
-    <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
-    <script type="text/javascript" src="{{ site.baseurl }}/js/splash.js"></script>
+    {% include scripts.html %}
+    {% include analytics.html %}
   </body>
 </html>
