--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,6 +51,7 @@
       <div id="topnav">
         <a href="#get-stickers" class="btn">Get Stickers</a>
         <a href="#download-print" class="btn">Download and Print</a>
+        <a href="#about" class="btn">About the Project</a>
       </div>
       {{ content }}
     </main>
