--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,9 +49,9 @@
     <div id="sidebar"></div>
     <main id="page-content">
       <div id="topnav">
-        <a href="#get-stickers" class="btn">Get Stickers</a>
+        <a href="#get-stickers" class="btn"><span class="hidden-xs">Get</span> Stickers</a>
         <a href="#download-print" class="btn">Download and Print</a>
-        <a href="#about" class="btn">About the Project</a>
+        <a href="#about" class="btn">About <span class="hidden-xs">the Project</span></a>
       </div>
       {{ content }}
     </main>
