add link to twitter account

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,6 +49,7 @@
     <div id="sidebar"></div>
     <main id="page-content">
       <div id="topnav">
+        <a href="https://twitter.com/DefendTheWindow" class="twitter-btn" target="_blank"><i class="icon icon-twitter"></i> @DefendTheWindow</a>
         <a href="#get-stickers" class="btn"><span class="hidden-xs">Get</span> Stickers</a>
         <a href="#download-print" class="btn">Download and Print</a>
         <a href="#about" class="btn">About <span class="hidden-xs">the Project</span></a>
