--- a/css/splash.scss
+++ b/css/splash.scss
@@ -65,6 +65,23 @@ small {
   background-color: $gray-dark;
   padding: 20px;
   text-align: right;
+  .twitter-btn {
+    display: inline-flex;
+    float: left;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    line-height: 40px;
+    color: #fff;
+    i {
+      font-size: 40px;
+      line-height: 40px;
+      color: $brand-primary;
+    }
+    &:hover, &:focus {
+      text-decoration: none;
+    }
+  }
   .btn {
     color: #fff;
     border: 1px solid #fff;
